[tool.poetry]
name = "blueque"
version = "0.3.2"
description = "Simple job queueing for very long tasks"
authors = ["uStudio Developers <dev@ustudio.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "blueque"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
